# task-automation-system

./: .coverage  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  task_automation.db
.sonar/: report-task.txt
alembic/: env.py
alembic/versions/: 42f46eae4eb8_initial_schema.py
app/: main.py
app/api/: admin.py  auth.py  task.py
app/core/: config.py  security.py
app/db/: session.py
app/dependencies/: current_user.py  get_session.py  rbac.py
app/error/: custom_execption.py  register_handlers.py
app/middleware/: log_middleware.py
app/models/: __init__.py  metadata_repository.py  refresh_token_model.py  task_model.py  user_model.py
app/queue/: celery.py  tasks.py
app/repositories/: task_repository.py  user_repository.py
app/schemas/: task_schema.py  token_schema.py  user_schema.py
app/services/: admin_service.py  auth_service.py  schedule.py  send_comic_service.py  send_reminder_service.py  system_check_service.py  task_get_del_service.py  task_service.py
app/utils/mail_utils/: mail.py  url_safe_token.py
tests/: conftest.py  test_auth_repository.py  test_auth_route.py  test_auth_service.py  test_task_repository.py  test_task_route.py  test_task_service.py
