[project]
name = "task-automation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "amqp>=5.3.1",
    "asgiref>=3.11.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "celery-pool-asyncio>=0.2.0",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.135.3",
    "itsdangerous>=2.2.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "pysonar>=1.4.0.4676",
    "rabbitmq>=0.2.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-celery-beat>=0.8.4",
]
